--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+<link href="https://fonts.cdnfonts.com/css/gilroy-bold?styles=20876,20879" rel="stylesheet">
 
   <link rel="stylesheet" href="../src/style.css">
   <link rel="stylesheet" href="../src/reset.css">
