--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
 
   <link rel="stylesheet" href="../src/style.css">
   <link rel="stylesheet" href="../src/reset.css">
-  <title>React App</title>
+  <title>CV Maksim Bekish</title>
 </head>
 
 <body>
