--- a/public/index.html
+++ b/public/index.html
@@ -4,15 +4,15 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-<link href="https://fonts.cdnfonts.com/css/gilroy-bold?styles=20876,20879" rel="stylesheet">
+  <link href="https://fonts.cdnfonts.com/css/gilroy-bold?styles=20876,20879" rel="stylesheet">
 
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
   <link rel="stylesheet" href="../src/style.css">
   <link rel="stylesheet" href="../src/reset.css">
   <title>CV Maksim Bekish</title>
 </head>
 
 <body>
-  <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
 </body>
 
